# cooker-client-python

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: build.yaml  checks.yaml
aio_cooker_client/: __init__.py  client.py
tests/: test_integration.py
