[metadata]
name = aio-cooker-client
version = attr: aio_cooker_client.__version__
author = Quortex DevOps Team
author_email = devops@quortex.io
license = Apache-2.0
description = A python (asyncio) client library for Quortex Cooker
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/quortex/cooker-client-python
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7

[options]
packages = aio_cooker_client
install_requires = aiohttp==3.7.*,>=3.7.0
python_requires = ==3.*,>=3.7.0

[options.extras_require]
dev =
    pytest==5.*,>=5.2.0
    pytest-asyncio==0.*,>=0.15.1
